Details
Description
visual c++ 2008 redistributable installator from rapps have buttons invisible on the last step
r61103
vbox 4.3.2
1024 mb of ram
Attachments
Issue Links
- is blocked by
-
CORE-18817 [NTUSER] Winpos.c modification generates bad first drawing of some elements
-
- Resolved
-
-
CORE-19497 Regression, part of the statusbar with the sizegrip is not redrawn properly
-
- Resolved
-
-
CORE-18830 Explorer Drawing glitch: Missing "X" on "Folder" pane when Right Click > Explore from Desktop icons
-
- Resolved
-
-
CORE-19147 Explorer shows garbage when "separator" is moved (with Search/Folder pane)
-
- Untriaged
-
- is duplicated by
-
CORE-3382 Blinking text while installing vc2008 redist package
-
- Resolved
-
-
CORE-7753 Caesar 3: Autorun.exe filckers endlessly
-
- Resolved
-
-
CORE-10741 API monitor high CPU usage
-
- Resolved
-
-
CORE-15300 Worksoft Navigator 0.985 installer is locked in an endless redrawing loop
-
- Resolved
-
-
CORE-16325 Some of MWSnap's installation windows fail to display content
-
- Resolved
-
-
CORE-17925 MS Visual C++ 2008 Redistributable Setup takes long time
-
- Resolved
-
-
CORE-18153 BitComet 1.86 forces the shell to a endless redrawing
-
- Resolved
-
-
CORE-18434 Ubisoft installers (SetupUbi) - continously refresh of window
-
- Resolved
-
-
CORE-15546 Shed 1.0 from rapps - setup does not draw some dlgs initially, but redraw can be enforced
-
- Resolved
-
-
CORE-18582 Emule 0.50a - Interface frozen / flickering until window is moved
-
- Resolved
-
-
CORE-16657 [WIN32SS?/comctl32?] Resizing header of SOME listviews may make the header flicker badly
-
- Resolved
-
-
CORE-17454 A drawing glitch in SumatraPdf 3.1.2 when restoring the window from maximized state
-
- Resolved
-
-
CORE-18553 CPU-Z 1.84 "about" flickers
-
- Resolved
-