[0.4.14] Anti-flicker backport winpos.c

This effective one-liner-backport fixes flickering in some apps like:
- CORE-7652 Hyperlink Blinking text while installing vc2008 redist package
and many duplicate-tickets of that same symptom, like:
- CORE-18553 CPUID CPU-Z 1.84 "about" flickers
- CORE-7753 Caesar 3: Autorun.exe flickers endlessly
- CORE-10741 API monitor high CPU usage
- CORE-15300 Worksoft Navigator 0.985 installer is locked in an endless redrawing loop
- CORE-16325 Some of MWSnap's installation windows fail to display content
- CORE-17925 MS Visual C++ 2008 Redistributable Setup takes long time
- CORE-18153 BitComet 1.86 forces the shell to a endless redrawing
- CORE-18434 Ubisoft installers (SetupUbi) - continously refresh of window
- CORE-15546 Shed 1.0 from rapps - setup does not draw some dlgs initially, but redraw can be enforced
- CORE-18582 Emule 0.50a - Interface frozen / flickering until window is moved

And since I do also port back the follow-up-commit of that, we can achieve that without introducing
the following regressions which the initial fixes caused:
- CORE-18817 [NTUSER] Winpos.c modification generates bad first drawing of some elements
- CORE-18830 Explorer Drawing glitch: Missing "X" on "Folder" pane when Right Click > Explore from Desktop icons
Those 2 things did not happen in the older releases beforehand.

In sum this is a squashed backport of:
0.4.15-dev-6507-g 49dbc8fbbb090812d21ac10e79d42c787638e2ec [NTUSER] Whitespace-fixes winpos.c
0.4.15-dev-5684-g 57eb2a6bf469383848a559feedc1eed7fc13dd5c [NTUSER] Missing "X" on "Folder" pane when Right Click > Explore from Desktop icons & Rapps toolbar errors (#5068) CORE-18830, CORE-18817
the superseded 0.4.15-dev-5618-g 8866b9d7b03e62b3ed3041acb0b3791fbc1733aa Update win32ss/user/ntuser/winpos.c
the superseded 0.4.15-dev-5617-g 7866eb28862b31f2ee90045293c662c8ac834a70 [NTUSER] Fix winpos bug hyperlink&images loop redrawing CORE-7652 (#4995)

To prevent increased binary size for the added conditions in the code in older branches, strip a single good-path-TRACE()
which had no trailing \n in the older branches,
but where that \n was added in master head meanwhile. So that TRACE was a diff to older branches anyway.